<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buscaminas Remix</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Sekai">Buscaminas</string>
    <string name="edit_message">Escribe tu nombre</string>
    <string name="button_facil">Fácil</string>
    <string name="button_normal">Normal</string>
    <string name="button_dificil">Difícil</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_grid_demo">GridDemo</string>
    <string name="resetBdesc">Resetea el juego</string>
    <string name="title_activity_modo_normal">Modo Normal</string>
    <string name="title_activity_modo_dificil">Modo Difícil</string>
    <string name="reloj">00:00</string>
    <string name="title_activity_modo_remix">ModoRemix</string>
    <string name="button_remix">Remix</string>
    <string name="button_survival">Survival</string>
    <string name="comboempty"></string>
    <string name="x0">x0</string>
    <string name="x2">x2</string>
    <string name="listo">Listo</string>
    <string name="title_activity_modo_padre">Modo Padre</string>
    <string name="title_activity_modo_facil">Modo Fácil</string>
    <string name="nombre">Nombre: </string>
    <string name="tiempo">Tiempo: </string>
    <string name="tweet">tweet it</string>
    <string name="resultmsj">Felicitaciones!\nHas logrado vencer el juego.\n\nTu tiempo total fue:</string>
    <string name="resultmxmsj">Felicitaciones! Has logrado vencer el juego.\n\nTu puntuacion total fue:</string>
    <string name="title_activity_result_screen_normal">Resultados Normal </string>
    <string name="title_activity_result_screen_facil">Resultados Normal </string>
    <string name="title_activity_result_screen_dificil">Resultados Normal </string>
    <string name="title_activity_result_screen">ResultScreen </string>
    <string name="title_activity_result_screen_remix">Resultados Normal </string>
    <string name="title_activity_consult_results">Results</string>
    <string name="title_activity_modo_survival">ModoSurvival</string>
    <string name="title_activity_result_screen_survival">ResultScreenSurvival</string>

</resources>
