<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<TextView 
    	android:id="@+id/titlefacil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_facil" 
        android:textSize="45sp"/>
<TextView 
    	android:id="@+id/nombretitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlefacil"
        android:text="@string/nombre" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/tiempotitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlefacil"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/nombretitle1"
        android:text="@string/tiempo" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/nombrelist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombretitle1"
        android:layout_alignLeft="@id/nombretitle1"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/tiempolist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiempotitle1"
        android:layout_alignLeft="@id/tiempotitle1"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/titlenormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombrelist1"
        android:text="@string/button_normal" 
        android:textSize="45sp"/>
<TextView 
    	android:id="@+id/nombretitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlenormal"
        android:text="@string/nombre" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/tiempotitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlenormal"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/nombretitle2"
        android:text="@string/tiempo" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/nombrelist2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombretitle2"
        android:layout_alignLeft="@id/nombretitle2"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/tiempolist2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiempotitle2"
        android:layout_alignLeft="@id/tiempotitle2"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/titledificil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombrelist2"
        android:text="@string/button_dificil" 
        android:textSize="45sp"/>
<TextView 
    	android:id="@+id/nombretitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titledificil"
        android:text="@string/nombre" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/tiempotitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titledificil"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/nombretitle3"
        android:text="@string/tiempo" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/nombrelist3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombretitle3"
        android:layout_alignLeft="@id/nombretitle3"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/tiempolist3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiempotitle3"
        android:layout_alignLeft="@id/tiempotitle3"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/titleremix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombrelist3"
        android:text="@string/button_remix" 
        android:textSize="45sp"/>
<TextView 
    	android:id="@+id/nombretitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleremix"
        android:text="@string/nombre" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/tiempotitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleremix"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/nombretitle4"
        android:text="@string/tiempo" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/nombrelist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombretitle4"
        android:layout_alignLeft="@id/nombretitle4"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/tiempolist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiempotitle4"
        android:layout_alignLeft="@id/tiempotitle4"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>

<TextView 
    	android:id="@+id/titlesurvival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombrelist4"
        android:text="@string/button_survival" 
        android:textSize="45sp"/>
<TextView 
    	android:id="@+id/nombretitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlesurvival"
        android:text="@string/nombre" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/tiempotitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlesurvival"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/nombretitle5"
        android:text="@string/tiempo" 
        android:textSize="36sp"/>
<TextView 
    	android:id="@+id/nombrelist5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombretitle5"
        android:layout_alignLeft="@id/nombretitle5"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
<TextView 
    	android:id="@+id/tiempolist5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiempotitle5"
        android:layout_alignLeft="@id/tiempotitle5"
        android:text="@string/comboempty" 
        android:textSize="24sp"/>
</RelativeLayout>
</ScrollView>